# Grace

./: .env.example  .gitignore  .markdownlint.jsonc  AGENTS.md  Brain2DevelopmentProcess.html  CONTEXT.md  CONTRIBUTING.md  CodexPlan.md  Grace vs. Git positioning.txt  GraceDevelopmentProcess.html  LICENSE.md  README.md  REPO_INDEX.md  SECURITY.md  _endpoint_stub.txt  code_of_conduct.md  global.json  update-contributing.skill
.beads/: config.yaml  issues.jsonl  last-touched  metadata.json
.config/: dotnet-tools.json
.github/: PULL_REQUEST_TEMPLATE.md  code_review_instructions.md  copilot-instructions.md
.grace/: graceconfig.json
Grace.Server.Tests/: General.Server.Tests.fs  Grace.Server.Tests.fsproj  Program.fs  Repository.Server.Tests.fs  Validations.Server.Tests.fs
artifacts/: adr-0001-contentblocks-dag.html
docs/: .markdownlint.jsonc  AI Submissions.md  API versioning.md  Authentication.md  BLAKE3 SHA-256 version hash final audit.md  Branch annotation final audit.md  Branch annotation.md  Branching strategy.md  Build versioning.md  Continuous review.md  Contributor-owned accounting design.md  Current branch materialization final audit.md  Data types in Grace.md  Design and Motivations.md  Development process.md  Frequently asked questions.md  Grace Cache implementation audit.md  Grace doctor.md  Mermaid diagrams.md  (+17 more)
sdk/python/grace-sdk/: pyproject.toml
sdk/python/grace-sdk/smoke/: import_facade.py
sdk/python/grace-sdk/src/grace_sdk/: __init__.py  client.py
sdk/python/grace-sdk/src/grace_sdk/_generated/: __init__.py  grace_raw_client_metadata.py
(+906 files in other folders)
