[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "grace-sdk"
version = "0.0.0.dev9"
description = "Facade-first Grace Python SDK package harness."
requires-python = ">=3.11"
authors = [{ name = "Grace" }]

[tool.hatch.build.targets.wheel]
packages = ["src/grace_sdk"]
